--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -9,7 +9,7 @@
     mode=simple,
     result=answer,
     toc=onecol,
-]{elegantbook_sierxue}
+]{elegantsierxue310}
 \input{preamble}
 \input{title}
 \begin{document}
