--- a/title.tex
+++ b/title.tex
@@ -2,7 +2,7 @@
 \subtitle{科学写作利器 \LaTeX{} 和团队协作神器 Git}
 
 \author{甘湘华}
-\institute{西南财经大学} % Commented out in the cls file.
+% \institute{}
 \date{\zhtoday}
 \version{0.01}
 
