--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -537,6 +537,24 @@
     VSCode: \href{media/casts/symbol-e-vscode.mp4}{symbol-e-vscode.mp4}.
 \end{cast}
 
+\subsection{分式和根式}%
+\label{sub:frac-sqrt}
+
+分式使用 \lstinline|\frac{分子}{分母}| 来书写。
+行内公式中，分式在缺省情况下被极度压缩。
+如果想得到较大的显示，用命令 \lstinline|\dfrac{分子}{分母}|。
+在行间公式中，分式在缺省情况下比在行内公式大，
+如想得到压缩的公式，用命令 \lstinline|\tfrac{分子}{分母}|。
+\begin{exercise}\label{exe:symbol-f}
+    在文件
+    \href{learn-latex/basic-03/symbol-f.tex}{symbol-f.tex}
+    中按提示输入相应的符号后，编译此文件, 观察 pdf 输出。
+\end{exercise}
+\begin{cast}\label{cast:symbol-f}
+    gVim: \href{media/casts/symbol-f-vim.mp4}{symbol-f-vim.mp4};
+    VSCode: \href{media/casts/symbol-f-vscode.mp4}{symbol-f-vscode.mp4}.
+\end{cast}
+
 本节的基础知识学完以后，就可以使用模板写作论文了。
 
 \newpage
